objects/AOPS_STG_CONTACT_MASTER__c.object
<CustomObject>
    <fields>
        <fullName>CCU300F_AUTH_BUYER_YN__c</fullName>
        <label>CCU300F_AUTH_BUYER_YN</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_BIRTHDAY__c</fullName>
        <label>CCU300F_BIRTHDAY</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_BRAND__c</fullName>
        <label>CCU300F_BRAND</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_CNT_SEQ__c</fullName>
        <label>CCU300F_CNT_SEQ</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_CONTACT_ID__c</fullName>
        <externalId>true</externalId>
        <label>CCU300F_CONTACT_ID</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_CPY_PRIMARY_CONTACT__c</fullName>
        <label>CCU300F_CPY_PRIMARY_CONTACT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_CREATE_BY__c</fullName>
        <label>CCU300F_CREATE_BY</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_CREATE_DT__c</fullName>
        <label>CCU300F_CREATE_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCU300F_CUSTOMER_ID__c</fullName>
        <externalId>true</externalId>
        <label>CCU300F_CUSTOMER_ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_CUST_REQUEST_IND__c</fullName>
        <label>CCU300F_CUST_REQUEST_IND</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_DESK_TOP__c</fullName>
        <label>CCU300F_DESK_TOP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_DFT_BILL_ADDR__c</fullName>
        <label>CCU300F_DFT_BILL_ADDR</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_DFT_MAIL_ADDR__c</fullName>
        <label>CCU300F_DFT_MAIL_ADDR</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_DFT_SHIP_ADDR__c</fullName>
        <label>CCU300F_DFT_SHIP_ADDR</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_INFO_SOURCE__c</fullName>
        <label>CCU300F_INFO_SOURCE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_LESS_MAIL__c</fullName>
        <label>CCU300F_LESS_MAIL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_MID_INITIAL__c</fullName>
        <label>CCU300F_MID_INITIAL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_NAME_1__c</fullName>
        <label>CCU300F_NAME_1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_NAME_2__c</fullName>
        <label>CCU300F_NAME_2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_POLYBAG_FLAG__c</fullName>
        <label>CCU300F_POLYBAG_FLAG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_PO_NBR__c</fullName>
        <label>CCU300F_PO_NBR</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_RELEASE_NBR__c</fullName>
        <label>CCU300F_RELEASE_NBR</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_RENT_NAME_FLAG__c</fullName>
        <label>CCU300F_RENT_NAME_FLAG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_ROLE_1__c</fullName>
        <label>CCU300F_ROLE_1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_ROLE_2__c</fullName>
        <label>CCU300F_ROLE_2</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_RSV_10CHAR__c</fullName>
        <label>CCU300F_RSV_10CHAR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_RSV_10V2__c</fullName>
        <label>CCU300F_RSV_10V2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU300F_RSV_1CHAR__c</fullName>
        <label>CCU300F_RSV_1CHAR</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_RSV_2CHAR__c</fullName>
        <label>CCU300F_RSV_2CHAR</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_SALUTATION__c</fullName>
        <label>CCU300F_SALUTATION</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_STATUS__c</fullName>
        <label>CCU300F_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_TITLE__c</fullName>
        <label>CCU300F_TITLE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_TYPE__c</fullName>
        <label>CCU300F_TYPE</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_UPDATE_BY__c</fullName>
        <label>CCU300F_UPDATE_BY</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU300F_UPDATE_DT__c</fullName>
        <label>CCU300F_UPDATE_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CXTCNTM_ACTION__c</fullName>
        <label>ACTION</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTCNTM_AOPS_KEY1__c</fullName>
        <label>AOPS KEY1 Account/Prospect</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTCNTM_AOPS_KEY2__c</fullName>
        <label>AOPS KEY2 Address/Contact</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTCNTM_AOPS_KEY3__c</fullName>
        <label>AOPS KEY3 Contact point/...</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTCNTM_MSG_TYPE__c</fullName>
        <label>Message Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTCNTM_REQ_ID__c</fullName>
        <label>Original Request ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTCNTM_REQ_SOURCE__c</fullName>
        <label>Original Request Source</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTCNTM_TIMESTAMP__c</fullName>
        <label>DB TIMESTAMP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Attempts__c</fullName>
        <label>Number Of Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Status_Message__c</fullName>
        <externalId>true</externalId>
        <label>Sync Status Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Record ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AOPS CONTACT MASTER</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>AOPS STAGING CONTACT MASTER</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AOPS CONTACT MASTER</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>